--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <title>Document</title>
 </head>
 <body>
-
+    <nav>
+          <div class="logo">
+                Movie book
+          </div>
+          <ul>
+                <li>Home</li>
+                <li>About us</li>
+                <li>Know More</li>
+          </ul>
+    </nav>
     <main>
 
     </main>
