--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
 </head>
 <body>
     <nav>
-          <div class="logo">
-                Movie book
-          </div>
-          <ul>
-                <li>Home</li>
-                <li>About us</li>
-                <li>Know More</li>
-          </ul>
+        <div class="logo">Movie Book</div>
+        <ul>
+            <li>Home</li>
+            <li>About us</li>
+            <li>Know more</li>
+        </ul>
     </nav>
-    <main>
+    <main id="main">
 
     </main>
     <div id="booker">
